--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>generic</module>
         <module>Amazon</module>
+        <module>Facebook</module>
     </modules>
 
     <properties>
