--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>generic</module>
         <module>Amazon</module>
         <module>Facebook</module>
+        <module>Cnn</module>
     </modules>
 
     <properties>
