--- a/Citybank/pom.xml
+++ b/Citybank/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cnn</artifactId>
+    <artifactId>citybank</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,13 +21,6 @@
             <groupId>com.peoplentech</groupId>
             <artifactId>generic</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
-            <version>3.141.59</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
